# kantaq

./: .env.example  .env.supabase.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  conftest.py  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: fresh-clone.yml  py.yml  web.yml
adapters/: README.md
adapters/backend-postgres/: pyproject.toml
adapters/backend-postgres/src/kantaq_backend_postgres/: __init__.py  app.py  backend.py  client.py  commit.py  schema.py  seed.py  serve.py
adapters/backend-postgres/tests/: conftest.py  test_backend.py  test_client.py  test_compose_smoke.py  test_deny.py  test_join_identity.py  test_parity.py  test_seed.py  test_server.py
adapters/backend-supabase/: pyproject.toml
adapters/backend-supabase/src/kantaq_backend_supabase/: __init__.py  auth.py  keys.py  schema.py  sync.py
adapters/backend-supabase/tests/: conftest.py  test_atomic_rpc.py  test_auth.py  test_cas_live.py  test_cas_rpc.py  test_conflict_rpc_parity.py  test_keys.py  test_retention_compaction.py  test_rls.py  test_schema_drift.py  test_sync_backend.py  test_sync_live.py  test_sync_rls.py  test_verify_live.py
adapters/backend-supabase/tests/fixtures/: conflict_divergence_scenarios.json
apps/local-runtime/: pyproject.toml
apps/local-runtime/src/kantaq_runtime/: __init__.py  agents_api.py  app.py  audit_api.py  auth.py  config.py  conflicts_api.py  cutover.py  devices_api.py  export.py  export_api.py  grants_api.py  import_bundle.py  invitations_api.py  linear_import.py  me_api.py  members_api.py  memory_api.py  metrics_api.py  notifications.py  notifications_api.py  openapi.py  proposals_api.py  skills_api.py  sync_api.py  telemetry_api.py  tracker_api.py  verify.py
apps/local-runtime/tests/: test_agents_api.py  test_app.py  test_audit_api.py  test_auth.py  test_config.py  test_conflicts_api.py  test_cutover.py  test_devices_api.py  test_export.py  test_grants_api.py  test_import_roundtrip.py  test_invitations_api.py  test_linear_import.py  test_me_api.py  test_members_api.py  test_memory_api.py  test_metrics_api.py  test_milestones_api.py  test_notification_dispatch.py  test_notifications_api.py  test_openapi_drift.py  test_proposals_api.py  test_signed_writes.py  test_skills_api.py  test_sync_api.py  test_telemetry_api.py  test_ticket_badges.py  test_tracker_api.py  test_tracker_events.py  test_verify.py
docker/self-hosted-backend/: .env.self-hosted.example  Caddyfile  Dockerfile  README.md  docker-compose.yml
docs/: mcp.md  portability.md  protocol.md  security.md  setup-self-hosted.md  setup-supabase.md  stack.md  sync.md
docs/blog/: we-stopped-paying-for-linear.md  what-a-4-person-team-actually-pays.md
docs/clients/: compatibility.md
evals/: README.md  baseline.json  reco_fixtures.json
evals/fixtures/: memory.json
evals/fixtures/tickets/: EVAL-01.json  EVAL-02.json  EVAL-03.json  EVAL-04.json  EVAL-05.json  EVAL-06.json  EVAL-07.json  EVAL-08.json  EVAL-09.json  EVAL-10.json  EVAL-11.json  EVAL-12.json  EVAL-13.json  EVAL-14.json  EVAL-15.json  EVAL-16.json  EVAL-17.json  EVAL-18.json  EVAL-19.json  EVAL-20.json
scripts/: compat_check.py  e2e_server.py  gen_protocol_vectors.py  local_postgres.sh  roundtrip_check.py  uat_agent_roles.py  uat_ai_backend.py  uat_live_smoke.py  uat_roles.py  verify_agent.py
src/kantaq/: __init__.py  cli.py
supabase/: README.md
supabase/deploy/: conflict_records_catchup.sql  v0.2_debt30_catchup.sql  v0.2_live_verify.sql
supabase/migrations/: 0001_collections.sql  0002_sync_events.sql  0003_sync_acks.sql
supabase/policies/: 0001_rls.sql  0002_sync_rls.sql  0003_append_only.sql  0004_revoke_raw_insert.sql  0005_sync_acks_rls.sql
supabase/rpc/: events.sql  retention.sql
tests/: test_conformance_smoke.py  test_conformance_suite.py  test_export_roundtrip_gate.py  test_gate_suite.py  test_merge_policy_parity.py  test_sync_allowlists.py  test_uat_live_smoke.py  test_verb_map_parity.py
tests/agents/: test_real_agent_compat.py
tests/cli/: test_import_cli.py  test_mcp_cli.py  test_sync_cli.py
tests/compat/: conftest.py  test_tier1.py  test_tier2.py
tests/docs/: test_doc_links.py  test_quickstart_commands.py  test_v01_docs.py  test_v02_docs.py  test_v03_docs.py
tests/e2e/: test_hero_flow_timing.py  test_role_authz_matrix.py
web/: biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/e2e/: conflict-flow.spec.ts  hero-flow.spec.ts  memory-promotion.spec.ts  metrics-dashboard.spec.ts  uat-collab.spec.ts  uat-decision-affordances.spec.ts  uat-roles.spec.ts  uat-walkthrough.spec.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx  test-setup.ts
web/src/api/: client.test.ts  client.ts  openapi.json  schema.d.ts  types.ts
web/src/components/: ActorName.tsx  CallList.tsx  CitedMemory.tsx  ConflictCard.tsx  ConnectionBadge.tsx  FieldDiff.test.tsx  FieldDiff.tsx  Layout.tsx  MemoryPromotionCard.tsx  MetricsDashboard.tsx  MilestoneChip.tsx  MintedToken.tsx  ProposalCard.test.tsx  ProposalCard.tsx  ProposalChip.tsx  RecoPanel.test.tsx  RecoPanel.tsx  SessionCard.tsx  SyncBadge.test.tsx  SyncBadge.tsx  Tabs.tsx  ThemeToggle.tsx  TokenShowHint.tsx
web/src/lib/: agent.ts  flags.ts  format.ts  members.ts  session.test.tsx  session.ts  theme.ts  ui.ts  usePolling.test.ts  usePolling.ts
web/src/routes/: Agents.test.tsx  Agents.tsx  Backlog.test.tsx  Backlog.tsx  Inbox.test.tsx  Inbox.tsx  Memory.test.tsx  Memory.tsx  Milestones.test.tsx  Milestones.tsx  Onboarding.test.tsx  Onboarding.tsx  Settings.test.tsx  Settings.tsx  TicketPage.test.tsx  TicketPage.tsx  routes.test.tsx
web/src/routes/settings/: Devices.test.tsx  Devices.tsx  Export.test.tsx  Export.tsx  Identity.test.tsx  Identity.tsx  Members.test.tsx  Members.tsx  MyAgent.test.tsx  MyAgent.tsx  Notifications.test.tsx  Notifications.tsx  SkillMappings.test.tsx  SkillMappings.tsx  Sync.test.tsx  Sync.tsx  (+4 more)
web/src/test/: builders.ts  mockApi.ts  render.test.tsx  render.tsx
