[project]
name = "kantaq"
version = "0.0.5"
description = "kantaq — local-first, agent-native issue tracker (workspace umbrella + CLI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Lionel Lau" }]
dependencies = [
    "kantaq-protocol",
    "kantaq-sync-engine",
    "kantaq-core",
    "kantaq-mcp",
    "kantaq-db",
    "kantaq-local-runtime",
]

[project.scripts]
kantaq = "kantaq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kantaq"]

# ---------------------------------------------------------------------------
# uv workspace: one `uv sync` installs the umbrella + every member + dev tools.
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
kantaq-protocol = { workspace = true }
kantaq-sync-engine = { workspace = true }
kantaq-core = { workspace = true }
kantaq-mcp = { workspace = true }
kantaq-db = { workspace = true }
kantaq-local-runtime = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",       # FastAPI TestClient transport
    "pre-commit>=3.8.0",
]

# ---------------------------------------------------------------------------
# Tooling config (shared across all Python packages in the workspace)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["web", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = [
    "kantaq",
    "kantaq_protocol",
    "kantaq_sync_engine",
    "kantaq_core",
    "kantaq_mcp",
    "kantaq_db",
    "kantaq_runtime",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["web/", "build/", "dist/"]
# Workspace packages use a src/ layout; mypy resolves them from the installed venv.

[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
addopts = "-q --import-mode=importlib"
