[project]
name = "kantaq"
version = "0.2.0"
description = "kantaq — local-first, agent-native issue tracker (workspace umbrella + CLI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Lionel Lau" }]
dependencies = [
    "kantaq-protocol",
    "kantaq-sync-engine",
    "kantaq-core",
    "kantaq-mcp",
    "kantaq-db",
    "kantaq-local-runtime",
    "kantaq-backend-supabase",
    "kantaq-backend-postgres",
]

[project.scripts]
kantaq = "kantaq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kantaq"]

# ---------------------------------------------------------------------------
# uv workspace: one `uv sync` installs the umbrella + every member + dev tools.
# ---------------------------------------------------------------------------
[tool.uv.workspace]
# Both adapters now build (MOD-28 self-hosted backend landed in v0.3, E25);
# adapters are listed explicitly rather than globbed.
members = ["packages/*", "apps/*", "adapters/backend-supabase", "adapters/backend-postgres"]

[tool.uv.sources]
kantaq-protocol = { workspace = true }
kantaq-sync-engine = { workspace = true }
kantaq-core = { workspace = true }
kantaq-mcp = { workspace = true }
kantaq-db = { workspace = true }
kantaq-local-runtime = { workspace = true }
kantaq-backend-supabase = { workspace = true }
kantaq-backend-postgres = { workspace = true }
kantaq-test-harness = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",      # E27-T6: parallelize the suite across cores (-n auto)
    "pytest-randomly>=3.15.0",  # E27-T6: randomize order + reseed each run — the determinism guard
    "httpx>=0.27.0",       # FastAPI TestClient transport
    "pre-commit>=3.8.0",
    "psycopg[binary]>=3.2.0",  # live Postgres parity test (E02-T3); skipped when no server
    "pynacl>=1.5",         # second Ed25519 implementation for golden-vector cross-checks (D-11)
    "kantaq-test-harness",  # MOD-30 shared test harness (builders, fakes, fixtures)
]

# ---------------------------------------------------------------------------
# Tooling config (shared across all Python packages in the workspace)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["web", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = [
    "kantaq",
    "kantaq_protocol",
    "kantaq_sync_engine",
    "kantaq_core",
    "kantaq_mcp",
    "kantaq_db",
    "kantaq_runtime",
    "kantaq_backend_supabase",
    "kantaq_backend_postgres",
    "kantaq_test_harness",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
# Alembic migration scripts are generated code (op.create_table calls referencing
# sqlmodel.sql.sqltypes); they are exercised by the migration tests, not typed.
exclude = ["web/", "build/", "dist/", "migrations/versions/"]
# Workspace packages use a src/ layout; mypy resolves them from the installed venv.

[tool.pytest.ini_options]
testpaths = ["packages", "apps", "adapters", "tests"]
# E27-T6 (DEBT-31): -n auto parallelizes across cores. We use the DEFAULT `load`
# distribution (not loadscope) on purpose — the two heaviest tests
# (test_metrics_calibration, ~13s each: they seed the full as-built profile to
# gate the footprint estimate) live in one module, so loadscope would pin both to
# one worker (a 26s pole); `load` spreads them across workers (a 13s pole).
# pytest-randomly (auto-loaded) shuffles order + reseeds every run — the
# determinism guard that keeps the suite honest under parallelism. Debugging one
# file? `-n0` runs serially (skips the ~2-3s worker spawn) and `-p no:randomly`
# pins the order.
addopts = "-q --import-mode=importlib -n auto"

[tool.coverage.run]
branch = true
source = ["kantaq_protocol", "kantaq_mcp", "kantaq_core"]

[tool.coverage.report]
show_missing = true
