[project]
name = "kantaq-local-runtime"
version = "0.0.5"
description = "kantaq local runtime: FastAPI REST API + MCP HTTP route + serves the built UI (MOD-14)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kantaq_runtime"]
