[project]
name = "kantaq-local-runtime"
version = "0.0.5"
description = "kantaq local runtime: FastAPI REST API + MCP HTTP route + serves the built UI (MOD-14)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    # Identity: token-gated loopback auth + the members API (MOD-06 / E06).
    "kantaq-core",
    "kantaq-db",
    "sqlmodel>=0.0.22",
    # Multipart parsing for attachment uploads (MOD-03 / E12-T2); the library
    # FastAPI requires for UploadFile (Starlette ecosystem, MIT).
    "python-multipart>=0.0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kantaq_runtime"]
